nerva_libwallet2_api_c/src/main/cpp/nerva_wallet2_api_c.h

//     virtual TransactionInfo * transaction(int index)  const = 0;
extern ADDAPI void* NERVA_TransactionHistory_transaction(void* txHistory_ptr, int index);
//     virtual TransactionInfo * transaction(const std::string &id) const = 0;
extern ADDAPI void* NERVA_TransactionHistory_transactionById(void* txHistory_ptr, const char* id);
//     virtual std::vector<TransactionInfo*> getAll() const = 0;
//     virtual void refresh() = 0;
extern ADDAPI void NERVA_TransactionHistory_refresh(void* txHistory_ptr);
//     };
//     virtual ~AddressBook() = 0;
//     virtual std::vector<AddressBookRow*> getAll() const = 0;
//     virtual bool addRow(const std::string &dst_addr , const std::string &payment_id, const std::string &description) = 0;
//     virtual bool deleteRow(std::size_t rowId) = 0;
//     virtual bool setDescription(std::size_t index, const std::string &description) = 0;
//     virtual void refresh() = 0;
//     virtual std::string errorString() const = 0;
//     virtual int errorCode() const = 0;
//     virtual int lookupPaymentID(const std::string &payment_id) const = 0;
// };
// struct CoinsInfo
// {
//     virtual ~CoinsInfo() = 0;
//     virtual uint64_t blockHeight() const = 0;
//     virtual std::string hash() const = 0;
//     virtual size_t internalOutputIndex() const = 0;
//     virtual uint64_t globalOutputIndex() const = 0;
//     virtual bool spent() const = 0;
//     virtual bool frozen() const = 0;
//     virtual uint64_t spentHeight() const = 0;
//     virtual uint64_t amount() const = 0;
//     virtual bool rct() const = 0;
//     virtual bool keyImageKnown() const = 0;
//     virtual size_t pkIndex() const = 0;
//     virtual uint32_t subaddrIndex() const = 0;
//     virtual uint32_t subaddrAccount() const = 0;
//     virtual std::string address() const = 0;
//     virtual std::string addressLabel() const = 0;
//     virtual std::string keyImage() const = 0;
//     virtual uint64_t unlockTime() const = 0;
//     virtual bool unlocked() const = 0;
//     virtual std::string pubKey() const = 0;
//     virtual bool coinbase() const = 0;
//     virtual std::string description() const = 0;
// };
// struct Coins
// {
//     virtual ~Coins() = 0;
//     virtual int count() const = 0;
//     virtual CoinsInfo * coin(int index)  const = 0;
//     virtual std::vector<CoinsInfo*> getAll() const = 0;
//     virtual void refresh() = 0;
//     virtual void setFrozen(std::string public_key) = 0;
//     virtual void setFrozen(int index) = 0;
//     virtual void thaw(int index) = 0;
//     virtual void thaw(std::string public_key) = 0;
//     virtual bool isTransferUnlocked(uint64_t unlockTime, uint64_t blockHeight) = 0;
//    virtual void setDescription(const std::string &public_key, const std::string &description) = 0;
// };
// struct SubaddressRow {
// public:
//     SubaddressRow(std::size_t _rowId, const std::string &_address, const std::string &_label):
//         m_rowId(_rowId),
//         m_address(_address),
//         m_label(_label) {}

// private:
//     std::size_t m_rowId;
//     std::string m_address;
//     std::string m_label;
// public:
//     std::string extra;
extern ADDAPI const char* NERVA_SubaddressRow_extra(void* subaddressRow_ptr);
//     std::string getAddress() const {return m_address;}
extern ADDAPI const char* NERVA_SubaddressRow_getAddress(void* subaddressRow_ptr);
//     std::string getLabel() const {return m_label;}
extern ADDAPI const char* NERVA_SubaddressRow_getLabel(void* subaddressRow_ptr);
//     std::size_t getRowId() const {return m_rowId;}
extern ADDAPI size_t NERVA_SubaddressRow_getRowId(void* subaddressRow_ptr);
// };

// struct Subaddress
// {
//     virtual ~Subaddress() = 0;
//     virtual std::vector<SubaddressRow*> getAll() const = 0;
extern ADDAPI int NERVA_Subaddress_getAll_size(void* subaddress_ptr);
extern ADDAPI void* NERVA_Subaddress_getAll_byIndex(void* subaddress_ptr, int index);
//     virtual void addRow(uint32_t accountIndex, const std::string &label) = 0;
extern ADDAPI void NERVA_Subaddress_addRow(void* subaddress_ptr, uint32_t accountIndex, const char* label);
//     virtual void setLabel(uint32_t accountIndex, uint32_t addressIndex, const std::string &label) = 0;
extern ADDAPI void NERVA_Subaddress_setLabel(void* subaddress_ptr, uint32_t accountIndex, uint32_t addressIndex, const char* label);
//     virtual void refresh(uint32_t accountIndex) = 0;
extern ADDAPI void NERVA_Subaddress_refresh(void* subaddress_ptr, uint32_t accountIndex);
// };

// struct SubaddressAccountRow {
// public:
//     SubaddressAccountRow(std::size_t _rowId, const std::string &_address, const std::string &_label, const std::string &_balance, const std::string &_unlockedBalance):
//         m_rowId(_rowId),
//         m_address(_address),
//         m_label(_label),
//         m_balance(_balance),
//         m_unlockedBalance(_unlockedBalance) {}

// private:
//     std::size_t m_rowId;
//     std::string m_address;
//     std::string m_label;
//     std::string m_balance;
//     std::string m_unlockedBalance;
// public:
//     std::string extra;
extern ADDAPI const char* NERVA_SubaddressAccountRow_extra(void* subaddressAccountRow_ptr);
//     std::string getAddress() const {return m_address;}
extern ADDAPI const char* NERVA_SubaddressAccountRow_getAddress(void* subaddressAccountRow_ptr);
//     std::string getLabel() const {return m_label;}
extern ADDAPI const char* NERVA_SubaddressAccountRow_getLabel(void* subaddressAccountRow_ptr);
//     std::string getBalance() const {return m_balance;}
extern ADDAPI const char* NERVA_SubaddressAccountRow_getBalance(void* subaddressAccountRow_ptr);
//     std::string getUnlockedBalance() const {return m_unlockedBalance;}
extern ADDAPI const char* NERVA_SubaddressAccountRow_getUnlockedBalance(void* subaddressAccountRow_ptr);
//     std::size_t getRowId() const {return m_rowId;}
extern ADDAPI size_t NERVA_SubaddressAccountRow_getRowId(void* subaddressAccountRow_ptr);
// };

// struct SubaddressAccount
// {
//     virtual ~SubaddressAccount() = 0;
//     virtual std::vector<SubaddressAccountRow*> getAll() const = 0;
extern ADDAPI int NERVA_SubaddressAccount_getAll_size(void* subaddressAccount_ptr);
extern ADDAPI void* NERVA_SubaddressAccount_getAll_byIndex(void* subaddressAccount_ptr, int index);
//     virtual void addRow(const std::string &label) = 0;
extern ADDAPI void NERVA_SubaddressAccount_addRow(void* subaddressAccount_ptr, const char* label);