impls/monero.dart/lib/src/generated_bindings_nerva.g.dart


  late final _NERVA_TransactionHistory_transactionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>,
              ffi.Int)>>('NERVA_TransactionHistory_transaction');
  late final _NERVA_TransactionHistory_transaction =
      _NERVA_TransactionHistory_transactionPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>, int)>();

  ffi.Pointer<ffi.Void> NERVA_TransactionHistory_transactionById(
    ffi.Pointer<ffi.Void> txHistory_ptr,
    ffi.Pointer<ffi.Char> id,
  ) {
    return _NERVA_TransactionHistory_transactionById(
      txHistory_ptr,
      id,
    );
  }

  late final _NERVA_TransactionHistory_transactionByIdPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>>(
      'NERVA_TransactionHistory_transactionById');
  late final _NERVA_TransactionHistory_transactionById =
      _NERVA_TransactionHistory_transactionByIdPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  void NERVA_TransactionHistory_refresh(
    ffi.Pointer<ffi.Void> txHistory_ptr,
  ) {
    return _NERVA_TransactionHistory_refresh(
      txHistory_ptr,
    );
  }

  late final _NERVA_TransactionHistory_refreshPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_TransactionHistory_refresh');
  late final _NERVA_TransactionHistory_refresh =
      _NERVA_TransactionHistory_refreshPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> NERVA_SubaddressRow_extra(
    ffi.Pointer<ffi.Void> subaddressRow_ptr,
  ) {
    return _NERVA_SubaddressRow_extra(
      subaddressRow_ptr,
    );
  }

  late final _NERVA_SubaddressRow_extraPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('NERVA_SubaddressRow_extra');
  late final _NERVA_SubaddressRow_extra = _NERVA_SubaddressRow_extraPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> NERVA_SubaddressRow_getAddress(
    ffi.Pointer<ffi.Void> subaddressRow_ptr,
  ) {
    return _NERVA_SubaddressRow_getAddress(
      subaddressRow_ptr,
    );
  }

  late final _NERVA_SubaddressRow_getAddressPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('NERVA_SubaddressRow_getAddress');
  late final _NERVA_SubaddressRow_getAddress =
      _NERVA_SubaddressRow_getAddressPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> NERVA_SubaddressRow_getLabel(
    ffi.Pointer<ffi.Void> subaddressRow_ptr,
  ) {
    return _NERVA_SubaddressRow_getLabel(
      subaddressRow_ptr,
    );
  }

  late final _NERVA_SubaddressRow_getLabelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('NERVA_SubaddressRow_getLabel');
  late final _NERVA_SubaddressRow_getLabel = _NERVA_SubaddressRow_getLabelPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  int NERVA_SubaddressRow_getRowId(
    ffi.Pointer<ffi.Void> subaddressRow_ptr,
  ) {
    return _NERVA_SubaddressRow_getRowId(
      subaddressRow_ptr,
    );
  }

  late final _NERVA_SubaddressRow_getRowIdPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_SubaddressRow_getRowId');
  late final _NERVA_SubaddressRow_getRowId = _NERVA_SubaddressRow_getRowIdPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int NERVA_Subaddress_getAll_size(
    ffi.Pointer<ffi.Void> subaddress_ptr,
  ) {
    return _NERVA_Subaddress_getAll_size(
      subaddress_ptr,
    );
  }

  late final _NERVA_Subaddress_getAll_sizePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_Subaddress_getAll_size');
  late final _NERVA_Subaddress_getAll_size = _NERVA_Subaddress_getAll_sizePtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Void> NERVA_Subaddress_getAll_byIndex(
    ffi.Pointer<ffi.Void> subaddress_ptr,
    int index,
  ) {
    return _NERVA_Subaddress_getAll_byIndex(
      subaddress_ptr,
      index,
    );
  }

  late final _NERVA_Subaddress_getAll_byIndexPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>,
              ffi.Int)>>('NERVA_Subaddress_getAll_byIndex');
  late final _NERVA_Subaddress_getAll_byIndex =
      _NERVA_Subaddress_getAll_byIndexPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>, int)>();

  void NERVA_Subaddress_addRow(
    ffi.Pointer<ffi.Void> subaddress_ptr,
    int accountIndex,
    ffi.Pointer<ffi.Char> label,
  ) {
    return _NERVA_Subaddress_addRow(
      subaddress_ptr,
      accountIndex,
      label,
    );
  }

  late final _NERVA_Subaddress_addRowPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Uint32,
              ffi.Pointer<ffi.Char>)>>('NERVA_Subaddress_addRow');
  late final _NERVA_Subaddress_addRow = _NERVA_Subaddress_addRowPtr.asFunction<
      void Function(ffi.Pointer<ffi.Void>, int, ffi.Pointer<ffi.Char>)>();

  void NERVA_Subaddress_setLabel(
    ffi.Pointer<ffi.Void> subaddress_ptr,
    int accountIndex,
    int addressIndex,
    ffi.Pointer<ffi.Char> label,
  ) {
    return _NERVA_Subaddress_setLabel(
      subaddress_ptr,
      accountIndex,
      addressIndex,
      label,
    );
  }

  late final _NERVA_Subaddress_setLabelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Uint32, ffi.Uint32,
              ffi.Pointer<ffi.Char>)>>('NERVA_Subaddress_setLabel');
  late final _NERVA_Subaddress_setLabel =
      _NERVA_Subaddress_setLabelPtr.asFunction<
          void Function(
              ffi.Pointer<ffi.Void>, int, int, ffi.Pointer<ffi.Char>)>();

  void NERVA_Subaddress_refresh(
    ffi.Pointer<ffi.Void> subaddress_ptr,
    int accountIndex,
  ) {
    return _NERVA_Subaddress_refresh(
      subaddress_ptr,
      accountIndex,
    );
  }

  late final _NERVA_Subaddress_refreshPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Void>, ffi.Uint32)>>('NERVA_Subaddress_refresh');
  late final _NERVA_Subaddress_refresh = _NERVA_Subaddress_refreshPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, int)>();

  ffi.Pointer<ffi.Char> NERVA_SubaddressAccountRow_extra(
    ffi.Pointer<ffi.Void> subaddressAccountRow_ptr,
  ) {
    return _NERVA_SubaddressAccountRow_extra(
      subaddressAccountRow_ptr,
    );
  }

  late final _NERVA_SubaddressAccountRow_extraPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('NERVA_SubaddressAccountRow_extra');
  late final _NERVA_SubaddressAccountRow_extra =
      _NERVA_SubaddressAccountRow_extraPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> NERVA_SubaddressAccountRow_getAddress(
    ffi.Pointer<ffi.Void> subaddressAccountRow_ptr,
  ) {
    return _NERVA_SubaddressAccountRow_getAddress(
      subaddressAccountRow_ptr,
    );
  }

  late final _NERVA_SubaddressAccountRow_getAddressPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('NERVA_SubaddressAccountRow_getAddress');
  late final _NERVA_SubaddressAccountRow_getAddress =
      _NERVA_SubaddressAccountRow_getAddressPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> NERVA_SubaddressAccountRow_getLabel(
    ffi.Pointer<ffi.Void> subaddressAccountRow_ptr,
  ) {
    return _NERVA_SubaddressAccountRow_getLabel(
      subaddressAccountRow_ptr,
    );
  }

  late final _NERVA_SubaddressAccountRow_getLabelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('NERVA_SubaddressAccountRow_getLabel');
  late final _NERVA_SubaddressAccountRow_getLabel =
      _NERVA_SubaddressAccountRow_getLabelPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> NERVA_SubaddressAccountRow_getBalance(
    ffi.Pointer<ffi.Void> subaddressAccountRow_ptr,
  ) {
    return _NERVA_SubaddressAccountRow_getBalance(
      subaddressAccountRow_ptr,
    );
  }

  late final _NERVA_SubaddressAccountRow_getBalancePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('NERVA_SubaddressAccountRow_getBalance');
  late final _NERVA_SubaddressAccountRow_getBalance =
      _NERVA_SubaddressAccountRow_getBalancePtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> NERVA_SubaddressAccountRow_getUnlockedBalance(
    ffi.Pointer<ffi.Void> subaddressAccountRow_ptr,
  ) {
    return _NERVA_SubaddressAccountRow_getUnlockedBalance(
      subaddressAccountRow_ptr,
    );
  }

  late final _NERVA_SubaddressAccountRow_getUnlockedBalancePtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>>(
      'NERVA_SubaddressAccountRow_getUnlockedBalance');
  late final _NERVA_SubaddressAccountRow_getUnlockedBalance =
      _NERVA_SubaddressAccountRow_getUnlockedBalancePtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  int NERVA_SubaddressAccountRow_getRowId(
    ffi.Pointer<ffi.Void> subaddressAccountRow_ptr,
  ) {
    return _NERVA_SubaddressAccountRow_getRowId(
      subaddressAccountRow_ptr,
    );
  }

  late final _NERVA_SubaddressAccountRow_getRowIdPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_SubaddressAccountRow_getRowId');
  late final _NERVA_SubaddressAccountRow_getRowId =
      _NERVA_SubaddressAccountRow_getRowIdPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  int NERVA_SubaddressAccount_getAll_size(
    ffi.Pointer<ffi.Void> subaddressAccount_ptr,
  ) {
    return _NERVA_SubaddressAccount_getAll_size(
      subaddressAccount_ptr,
    );
  }

  late final _NERVA_SubaddressAccount_getAll_sizePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_SubaddressAccount_getAll_size');
  late final _NERVA_SubaddressAccount_getAll_size =
      _NERVA_SubaddressAccount_getAll_sizePtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Void> NERVA_SubaddressAccount_getAll_byIndex(
    ffi.Pointer<ffi.Void> subaddressAccount_ptr,
    int index,
  ) {
    return _NERVA_SubaddressAccount_getAll_byIndex(
      subaddressAccount_ptr,
      index,
    );
  }

  late final _NERVA_SubaddressAccount_getAll_byIndexPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>,
              ffi.Int)>>('NERVA_SubaddressAccount_getAll_byIndex');
  late final _NERVA_SubaddressAccount_getAll_byIndex =
      _NERVA_SubaddressAccount_getAll_byIndexPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>, int)>();

  void NERVA_SubaddressAccount_addRow(
    ffi.Pointer<ffi.Void> subaddressAccount_ptr,
    ffi.Pointer<ffi.Char> label,
  ) {
    return _NERVA_SubaddressAccount_addRow(
      subaddressAccount_ptr,
      label,
    );
  }
